added vectortiles support
